--- a/Style_12.css
+++ b/Style_12.css
@@ -122,7 +122,7 @@ header > nav, main, footer {
   /* border-color: #4d4da5cc;
   border-color: #ffffff; */
   padding: 5px;
-  background-color: rgb(245, 245, 245);
+  background-color: #E6E6FA;
 }
 
 /* appel par id */
@@ -135,13 +135,14 @@ header {
   position: fixed;
   width: 100%;
   height: 5vh;
-  background-color: rgb(245, 245, 245);
+  background-color: #E6E6FA;
+
 }
 /* appel par nom de balise */
 header > nav {
   display: flex;
   justify-content: space-between;
-  height: 100%;
+  height: 100px;
   align-items: center;
 }
 
@@ -161,15 +162,15 @@ header > nav > i.fa-bars {
 }
 
 section {
-  height: 400px;
-  padding-top: 10vh;
-  background-color: rgb(245, 245, 245);
+  height: 900px;
+  padding-top: 13vh;
+  background-color: #E6E6FA;
 
 }
 
 img {
-    width : 80px;
-    height : 50px;
+    width : 150px;
+    height : 100px;
     }
 
 h2{ 
@@ -177,19 +178,25 @@ h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-align: center;
     font-weight: 800;
-    background-color: rgb(104, 114, 255);
+    background-color: #85409D;
+    height: 30px;
+    font-size: xx-large;
+    padding-top: 10px;
 }
 
     p {
-        font-family: cursive;
-        color: rgb(104, 114, 255);
+        font-family: fantasy;
+        color: #85409D;
         text-align: center;
         font-style: italic;
+        padding-top: 10px;
+        font-size: large;
     }
 
-    a{ color: rgb(156, 115, 0);
+    a{ color: #85409D;
         font-weight: 800;
         font-style: italic;
+        font-size: larger;
         
     }
 
@@ -222,7 +229,7 @@ h2{
     width: 1300px;
     height: 300px;
     display: flex;
-    background-color: rgb(245, 245, 245);
+    background-color: #E6E6FA;
     justify-content: center;
    
    
@@ -230,7 +237,7 @@ h2{
 .footer {
     height: 800px;
     padding-top: 10vh;
-    background-color: rgb(245, 245, 245);
+    background-color: #E6E6FA;
 }
 .a-propos img{
     width: 100px;
@@ -249,6 +256,20 @@ h2{
     align-content: flex-start;
     justify-content: space-around;
 }
+.exemple {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 15px;
+ 
+  
+}
+.exemple img{
+  height: 250px;
+  width: 500px;
+}
+
+
 
 
 /* media query */
