--- a/Style.css
+++ b/Style.css
@@ -1,16 +1,34 @@
+
+ol, ul {
+  list-style: none;
+ 
+}
+blockquote,q {
+  quotes: none;
+}
+blockquote:before, blockquote:after, q:before, q:after {
+  content: "";
+  content: none;
+}
 html,body {
-  font-size: 18px;
- background-color: #0e0c07;
-  color:#9e9e9e;
+  font-size: 16px;
+background: url(/image/bck2.jpg);
+background-size: cover;
+  color:#e5b51c;
+ height: 611px;
+  width: 745px;
+ margin: 0;
+ padding: 0;
+ border: 0;
 }
 
 
 h1,h2,h3,h4 {
   
   font-weight: 200;
-  margin: 0.1em 0;
-  position: sticky;
-  margin-top: 5px;
+  /* margin: 0.1em 0;
+  position: sticky; */
+  /* margin-top: 5px; */
 }
 h1 { 
   font-size: 2.5em;
@@ -21,70 +39,101 @@ h2 {
   color: #e5b51c;
   font-size: 1.5em;
   font-family: 'Ephesis', cursive;
+  /* text-shadow: 0 0 7px #fff,
+  0 0 10px #fff,
+  0 0 21px #fff, */
+ 
  
 }
 h3{
-  color: #e5b51c;
-  font-size: 1.5em
+  color: #fdfdfd;
+  font-size: 1.5em;
+  align-items: center;
 }
 h4{
-  color:#e5b51c;
+  color:#ffffff;
   font-size: 1.5em;
 
 }
 a{
   color: #e7cdb1;;
 }
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+* {
+  scroll-behavior: smooth;
+}
 
 
+header > nav, main, footer {
+  border-style: solid;
+ /* border-width: 2px; */
 
-
-nav {
-  position: sticky;
-  top: 0;
-  height: 3.5em;
-  display: flex;
-  align-items: stretch;
-  justify-content: space-between;
-  flex-direction: column;
- 
+ padding: 3px;
+ /* background-color: #E6E6FA; */
 }
 header{
-   text-align: right; 
-   display: block; 
-  margin-top: 30%; 
+
+  width: 100%;
+  height: 110px;
+  background-color: rgba(0, 0, 0, 0.4);
+ 
  } 
+
+ header > nav {
+  display: flex;
+  justify-content: space-between;
+  height: 100px;
+  align-items: center;
+}
+header > nav.mobile {
+  transform: translateX(-200vw);
+}
+header > nav > ul.liste {
+  flex-grow: 1;
+  display: flex;
+  justify-content: space-around;
+}
+
+header > nav > i.fa-bars {
+  display: none;
+  cursor: pointer;
+}
+header > nav.mobile > i.fa-xmark {
+ 
+  cursor: pointer;
+}
+
 p {
   
-  color: rgb(255, 255, 255);
+  /* color: rgb(255, 255, 255); */
   font-size: x-large;
  margin-left: 20px;
  margin-right: 20px;
  margin-top: 50px;
- font-family: 'Grechen Fuemen', cursive;
+ font-family: 'Ephesis', cursive;
 }
 .one{
-  /* text-align: right; */
-  font-family: 'Grechen Fuemen', cursive;
+  margin-top: 0;
+  padding: 50px;
+  display: flex;
+flex-direction: column;
+  text-align: center;
+  font-family: 'Ballet', cursive;
 
 }
-/* img{
+img{
  height: 50px;
  width: 60px;
   
-} */
-img {
-  vertical-align:top;
-  width: 300px;
-  margin: auto;
 }
-.flotte {
-  float: left;
-  text-align: right;
-  }
+
+
 .contact{
   text-align: center;
-  font-family: 'Grechen Fuemen', cursive;
+  font-family: 'Ballet', cursive;
 }
 
 .menu {
@@ -99,41 +148,217 @@ img {
 }
 
 
-/* menu-button {
-  display: none;
+
+
+@media screen and (max-width: 768px) {
+  header > nav > ul.liste {
+    display: none;
+  }
+  header > nav > i.fa-bars {
+    display: block;
+  }
+  header > nav.open.mobile > .header-nav-mobile {
+    display: flex;
+    width: 100%;
+    padding: 5px;
+    justify-content: space-between;
+  }
+
+  header > nav.open.mobile {
+    padding: 0 !important;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    background: rgba(0, 0, 0, 0.4);
+    transform: translateY(0);
+    top: 0;
+  }
+  header > nav.open.mobile > ul.liste {
+    justify-content: space-around;
+    flex-direction: column;
+    display: flex;
+  }
+}
+
+div{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 10px;
+}
+/* div.presa-flex{
+margin: 80px;
 } */
 
+.presa {
+
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  /* grid-gap: 20px; */
+  background-color: rgba(0, 0, 0, 0.4);
+  margin: 80px;
+}
+
+.presa-flex {
+  display: grid;
+  grid-template-rows: max-content 200px 1fr;
+
+}
+
+.presa-flex img {
+  object-fit: cover;
+  /* width: 100%;
+  height: 100%; */
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-gap: 20px;
+}
+
+.card {
+  display: grid;
+  grid-template-rows: max-content 200px 1fr;
+  font-family: 'Ephesis', cursive;
+}
+
+.card img {
+  object-fit: cover;
+  width: 50px;
+  height: 50px;
+}
+#reseau{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+#presentation{
+  display: flex;
+  justify-content: center;
+}
+
+.ag-format-container {
+  width: 100px;
+  margin: 0 auto;
+}
 
 
-@media screen and (max-width: 600px) {
-  
-  menu-button {
-    
-    display: inline;
-    color: rgb(206, 206, 206);
-    font-size: 2em;
+.ag-courses_box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 
-    cursor: pointer;
+  padding: 40px 0;
+}
+.ag-courses_item {
+  -ms-flex-preferred-size: calc(33.33333% - 30px);
+  flex-basis: calc(33.33333% - 30px);
+
+  margin: 0 15px 30px;
+
+  overflow: hidden;
+
+  border-radius: 28px;
+}
+.ag-courses-item_link {
+  display: block;
+  padding: 30px 20px;
+  background-color: #121212;
+
+  /* overflow: hidden; */
+
+  position: relative;
+}
+.ag-courses-item_link:hover,
+.ag-courses-item_link:hover .ag-courses-item_date {
+  text-decoration: none;
+  color: #FFF;
+}
+.ag-courses-item_link:hover .ag-courses-item_bg {
+  -webkit-transform: scale(10);
+  -ms-transform: scale(10);
+  transform: scale(10);
+}
+.ag-courses-item_title {
+  min-height: 87px;
+  margin: 0 0 25px;
+
+  overflow: hidden;
+
+  font-weight: bold;
+  font-size: 30px;
+  color: #FFF;
+
+  z-index: 2;
+  position: relative;
+}
+.ag-courses-item_date-box {
+  font-size: 18px;
+  color: #FFF;
+
+  z-index: 2;
+  position: relative;
+}
+.ag-courses-item_date {
+  font-weight: bold;
+  color: #f9b234;
+
+  -webkit-transition: color .5s ease;
+  -o-transition: color .5s ease;
+  transition: color .5s ease
+}
+.ag-courses-item_bg {
+  height: 128px;
+  width: 128px;
+  background-color: #f9b234;
+
+  z-index: 1;
+  position: absolute;
+  top: -75px;
+  right: -75px;
+
+  border-radius: 50%;
+
+  -webkit-transition: all .5s ease;
+  -o-transition: all .5s ease;
+  transition: all .5s ease;
+}
+.ag-courses_item:nth-child(2n) .ag-courses-item_bg {
+  background-color: #f9b234;
+}
+.ag-courses_item:nth-child(3n) .ag-courses-item_bg {
+  background-color: #f9b234;
+}
+.ag-courses_item:nth-child(4n) .ag-courses-item_bg {
+  background-color: #f9b234;
+}
+.ag-courses_item:nth-child(5n) .ag-courses-item_bg {
+  background-color: #cd3e94;
+}
+.ag-courses_item:nth-child(6n) .ag-courses-item_bg {
+  background-color: #f9b234;
+}
+
+
+
+@media only screen and (max-width: 979px) {
+  .ag-courses_item {
+    -ms-flex-preferred-size: calc(50% - 30px);
+    flex-basis: calc(50% - 30px);
   }
-  .menu {
-    
-    position: absolute;
-    top: 3.6em;
-   
-    flex-direction: column;
-    min-width: 50%;
-    transition: all 0.5s ease-in-out;
+  .ag-courses-item_title {
+    font-size: 24px;
   }
-
-
 }
 
-.card-text{
-  text-align: center;
-  font-family: 'Grechen Fuemen', cursive;
+section{
+  display: flex;
+  border-radius: 28px;
 }
-.card-title {
-  text-align: center;
-}
-
-
