--- a/Style.css
+++ b/Style.css
@@ -93,6 +93,7 @@ header > nav > ul.liste {
   flex-grow: 1;
   display: flex;
   justify-content: space-around;
+  font-size: larger;
 }
 
 header > nav > i.fa-bars {
@@ -158,8 +159,10 @@ img{
   header > nav.open.mobile > .header-nav-mobile {
     display: flex;
     width: 100%;
+    height: 100%;
     padding: 5px;
-    justify-content: space-between;
+    justify-content:center;
+    font-size: xx-large;
   }
 
   header > nav.open.mobile {
@@ -168,7 +171,7 @@ img{
     width: 100%;
     height: 100%;
     flex-direction: column;
-    background: rgba(0, 0, 0, 0.4);
+    background: rgba(0, 0, 0, 0.8);
     transform: translateY(0);
     top: 0;
   }
@@ -185,9 +188,11 @@ div{
   justify-content: space-evenly;
   margin: 10px;
 }
-/* div.presa-flex{
-margin: 80px;
-} */
+div.contact{
+display: flex;
+justify-content: space-evenly;
+flex-direction: column;
+}
 
 .presa {
 
